

[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40" }
itertools = { version = "0.10.0" }
plonky2_maybe_rayon = { version = "0.1.0", features = ["parallel"]}
num = { version = "0.4.0" }
plonky2 = { path = "plonky2-main/plonky2" , features = ["parallel"]}
plonky2_u32 = { path = "plonky2-u32-main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.0"
num-traits = "0.2.14"
num-integer = "0.1"
rand = "0.8.4"
eccoxide = "0.3.1"
[dev-dependencies]
rand = { version = "0.8.4", features = ["getrandom"] }

